Optimize starter's auto-configuration . (2020) (#395)